@@ -56,6 +56,11 @@ version 2.76
 	    Add --tftp-mtu option. Thanks to Patrick McLean for the 
 	    initial patch.
 
+	    Check return-code of inet_pton() when parsing dhcp-option.
+	    Bad addresses could fail to generate errors and result in
+	    garbage dhcp-options being sent. Thanks to Marc Branchaud 
+	    for spotting this.
+
 
 version 2.75
             Fix reversion on 2.74 which caused 100% CPU use when a 
